# cargo-raze

./: .bazelignore  Cargo.toml
impl/: BUILD.bazel  Cargo.toml
impl/src/: context.rs  metadata.rs  planning.rs  settings.rs  util.rs
impl/src/planning/: crate_catalog.rs  license.rs  subplanners.rs
impl/src/rendering/: bazel.rs
impl/src/rendering/templates/: workspace.BUILD.template
impl/src/rendering/templates/partials/: build_script.template  targeted_dependencies.template
tools/: cargo.bzl
universe/: Cargo.toml  def.bzl
universe/examples/: Bazel.toml  WORKSPACE.bazel
universe/private/: fetcher.bzl
universe/src/: cargo.rs  lib.rs  main.rs
