[workspace]
members = [
    "impl",
    "universe",
]

[workspace.metadata.raze]
workspace_path = "//third_party/cargo"
gen_workspace_prefix = "cargo_raze"
genmode = "Remote"
default_gen_buildrs = true
experimental_api = true
render_package_aliases = false
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "i686-apple-darwin",
    "i686-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]